# math-test

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.multiarch  README.md  build.rs  questions.db
.cargo/: config.toml
.github/workflows/: docker.yaml
android/: Cargo.toml
android/src/: lib.rs
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  last30.tsx  last7.tsx  lastN.tsx  main.tsx  mistakes.tsx  today.tsx
gui/: Cargo.toml  LICENSE  README.md  build.rs  math-quiz.rc
gui-lib/: Cargo.toml  build.rs
gui-lib/src/: lib.rs
gui-lib/ui/: appwindow.slint
gui/src/: main.rs
gui/ui/: appwindow.slint  quiz.slint
gui/ui/surrealism-ui/: index.slint  surrealism-ui.toml
gui/ui/surrealism-ui/icons/: a.html
gui/ui/surrealism-ui/src/alert/: alert.slint
gui/ui/surrealism-ui/src/catalog/: catalog.slint  index.slint
gui/ui/surrealism-ui/src/checkbox/: checkbox.slint
gui/ui/surrealism-ui/src/collapse/: item.slint
gui/ui/surrealism-ui/src/icon/: icon.slint
gui/ui/surrealism-ui/src/input/: input.slint
gui/ui/surrealism-ui/src/number/: number.slint
gui/ui/surrealism-ui/src/progress/: index.slint  progress.slint
gui/ui/surrealism-ui/src/radio/: radio.slint
gui/ui/surrealism-ui/src/select/: select.slint
gui/ui/surrealism-ui/src/slider/: index.slint  slider.slint
gui/ui/surrealism-ui/src/switch/: switch.slint  switch_group.slint
gui/ui/surrealism-ui/src/tabbar/: tabbar.slint
gui/ui/surrealism-ui/themes/: index.slint
gui/ui/surrealism-ui/themes/src/: catalog.slint  progress.slint  schema.slint  slider.slint
gui/ui/surrealism-ui/use/: index.slint
gui/ui/surrealism-ui/use/src/: catalog.slint  icon.slint  menu.slint  progress.slint  slider.slint
gui/ui/views/: quiz.slint
public/: tailwind.css
quiz-repo/: Cargo.toml
quiz-repo/src/: lib.rs  question.rs  repo.rs
server/: Cargo.toml
server/src/: main.rs  question.rs  test_repo.rs
src/: embed_spa.rs  main.rs  question.rs  test_repo.rs
ui/: Cargo.toml
ui/src/: api.rs  main.rs  test_repo.rs
