[workspace]
resolver = "2"
members = [ "android","gui", "gui-lib", "quiz-repo"]

[package]
name = "server"
authors = ["Chen Xu <windoze@0d0a.com>"]
version = "0.1.0"
edition = "2021"
description = "Math quiz for kids"
rust-version = "1.80.0"

[dependencies]
anyhow = "1.0"
log = "0.4"
async-stream = "0.3"
poem = { version = "3", features = [
    "anyhow",
    "rustls",
    "embed",
    "acme-native-roots",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
now = "0.1"
rust-embed = "8.0"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
hex = { version = "0.4" }
mime_guess = { version = "2.0.3" }

quiz-repo = { path = "quiz-repo" }
