[package]
name = "gui-lib"
version = "0.1.0"
authors = ["Chen Xu <windoze@0d0a.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
slint = "1.7.1"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"

quiz-repo = { path = "../quiz-repo" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3"

[build-dependencies]
slint-build = "1.7.1"
embed-resource = "2.4"
