[package]
name = "math-quiz"
version = "0.1.0"
authors = ["Chen Xu <windoze@0d0a.com>"]
edition = "2021"
build = "build.rs"
description = "A simple math quiz game."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
slint = { version = "1.7.1" }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity = "2"
dirs = "5"

quiz-repo = { path = "../quiz-repo" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3"

[build-dependencies]
slint-build = "1.7.1"
embed-resource = "2.4"

[package.metadata.bundle]
name = "Math Quiz"
identifier = "com.0d0a.math-quiz"
icon = ["ui/assets/math-quiz.ico"]
copyright = "Copyright (c) Chen Xu 2024. All rights reserved."
category = "Education"

linux_use_terminal = false
