[package]
name = "math-quiz"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "A simple math quiz game."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gui-lib = { path = "../gui-lib" }
anyhow = "1.0"
env_logger = "0.11"
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3"

[build-dependencies]
embed-resource = "2.4"

[package.metadata.bundle]
name = "Math Quiz"
identifier = "com.0d0a.math-quiz"
icon = ["ui/assets/math-quiz.ico"]
copyright = "Copyright (c) Chen Xu 2024. All rights reserved."
category = "Education"

linux_use_terminal = false
