[package]
name = "math-test"
version = "0.1.0"
authors = ["Chen Xu <windoze@0d0a.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manganis = { version = "0.2.1" }
dioxus = { version = "0.5", features = ["web", "router"] }
anyhow = "1.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
